# cranexpr

./: .gitignore  Cargo.toml  README.md  devenv.nix  hatch_build.py  pyproject.toml
.github/: renovate.json
.github/workflows/: build-release-binaries.yml  ci.yml  publish.yml
bench/: ex-kirsch.py  rotate-clip.py
crates/cranexpr-ast/: Cargo.toml
crates/cranexpr-ast/src/: lib.rs
crates/cranexpr-cli/: Cargo.toml
crates/cranexpr-cli/src/: main.rs
crates/cranexpr-codegen/: Cargo.toml
crates/cranexpr-codegen/src/: comment_writer.rs  compiler.rs  component_type.rs  errors.rs  lib.rs  lut.rs  pointer.rs  simd_plan.rs  translate.rs  translate_simd.rs
crates/cranexpr-lexer/: Cargo.toml
crates/cranexpr-lexer/src/: cursor.rs  lib.rs
crates/cranexpr-lexer/src/snapshots/: cranexpr_lexer__tests__binary_ops-2.snap  cranexpr_lexer__tests__binary_ops-3.snap  cranexpr_lexer__tests__binary_ops-4.snap  cranexpr_lexer__tests__binary_ops.snap  cranexpr_lexer__tests__dot.snap  cranexpr_lexer__tests__example.snap  cranexpr_lexer__tests__ident.snap  cranexpr_lexer__tests__literals-2.snap  cranexpr_lexer__tests__literals-3.snap  cranexpr_lexer__tests__literals-4.snap  cranexpr_lexer__tests__literals-5.snap  cranexpr_lexer__tests__literals.snap  cranexpr_lexer__tests__ternary.snap  cranexpr_lexer__tests__underscore_prop_name.snap
crates/cranexpr-parser/: Cargo.toml
crates/cranexpr-parser/src/: errors.rs  lib.rs
crates/cranexpr-parser/src/snapshots/: cranexpr_parser__tests__and_or-2.snap  cranexpr_parser__tests__and_or.snap  cranexpr_parser__tests__atan2.snap  cranexpr_parser__tests__clip.snap  cranexpr_parser__tests__dup-2.snap  cranexpr_parser__tests__dup.snap  cranexpr_parser__tests__eq_op.snap  cranexpr_parser__tests__example.snap  cranexpr_parser__tests__exponent.snap  cranexpr_parser__tests__gte_op.snap  cranexpr_parser__tests__literals.snap  cranexpr_parser__tests__lte_op.snap  cranexpr_parser__tests__negative_literal.snap  cranexpr_parser__tests__prop.snap  cranexpr_parser__tests__store_does_not_affect_stack.snap  cranexpr_parser__tests__swap.snap  cranexpr_parser__tests__variables.snap  cranexpr_parser__tests__xor.snap
crates/cranexpr-parser/src/sorting_network/: mod.rs  optimal.rs
crates/cranexpr-transforms/: Cargo.toml
crates/cranexpr-transforms/src/: errors.rs  ident.rs  lib.rs  lut_visitor.rs  pixel_access_visitor.rs  prop_visitor.rs  simplify.rs  visit.rs
src/: component_type.rs  errors.rs  expr.rs  lib.rs  pixel.rs  prop_expr.rs  prop_visitor.rs  select.rs
src/codegen/: compiler.rs  globals.rs  mod.rs  pixel_type.rs  pointer.rs  translate.rs
src/lexer/: mod.rs
src/lexer/snapshots/: cranexpr__lexer__tests__binary_ops-2.snap  cranexpr__lexer__tests__binary_ops.snap  cranexpr__lexer__tests__dot.snap  cranexpr__lexer__tests__example.snap  cranexpr__lexer__tests__ident.snap  cranexpr__lexer__tests__literals-2.snap  cranexpr__lexer__tests__literals-3.snap  cranexpr__lexer__tests__literals-4.snap  cranexpr__lexer__tests__literals-5.snap  cranexpr__lexer__tests__literals.snap  cranexpr__lexer__tests__ternary.snap  cranexpr__lexer__tests__underscore_prop_name.snap
src/parser/: ast.rs  mod.rs  visit.rs
src/parser/snapshots/: cranexpr__parser__tests__atan2.snap  cranexpr__parser__tests__clip.snap  cranexpr__parser__tests__dup-2.snap  cranexpr__parser__tests__dup.snap  cranexpr__parser__tests__eq_op.snap  cranexpr__parser__tests__example.snap  cranexpr__parser__tests__exponent.snap  cranexpr__parser__tests__literals.snap  cranexpr__parser__tests__negative_literal.snap  cranexpr__parser__tests__prop.snap  cranexpr__parser__tests__swap.snap  cranexpr__parser__tests__variables.snap
