[workspace]
members = [
  "crates/cranexpr-ast",
  "crates/cranexpr-lexer",
  "crates/cranexpr-parser",
  "crates/cranexpr-transforms",
]
resolver = "3"

[workspace.package]
version = "0.3.0"
edition = "2024"

[workspace.dependencies]
cranexpr-ast = { path = "crates/cranexpr-ast" }
cranexpr-lexer = { path = "crates/cranexpr-lexer" }
cranexpr-parser = { path = "crates/cranexpr-parser" }
cranexpr-transforms = { path = "crates/cranexpr-transforms" }

[package]
name = "cranexpr"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
const-str = "=1.1.0"
miette = "=7.6.0"
nanoid = "=0.5.0"
num-traits = "=0.2.19"
thiserror = "=2.0.18"
vapours = "=0.2.5"
vapoursynth4-rs = "=0.4.0"

cranelift = "=0.130.1"
cranelift-jit = "=0.130.1"
cranelift-module = "=0.130.1"
cranelift-native = "=0.130.1"

cranexpr-ast = { workspace = true }
cranexpr-parser = { workspace = true }
cranexpr-transforms = { workspace = true }

[dev-dependencies]
approx = "=0.5.1"
ndarray = "=0.17.2"
rstest = "=0.26.1"

[patch.crates-io]
vapoursynth4-rs = { git = "https://github.com/inflation/vapoursynth4-rs", rev = "ae1ae21d292f9c8531afcedfc0aa56dda4050523" }
vapoursynth4-sys = { git = "https://github.com/inflation/vapoursynth4-rs", rev = "ae1ae21d292f9c8531afcedfc0aa56dda4050523" }

[profile.release]
codegen-units = 1
lto = true

[profile.release-debug]
inherits = "release"
debug = true

[workspace.lints.rust]
deprecated_safe = "warn"
improper_ctypes = "warn"
improper_ctypes_definitions = "warn"
non_ascii_idents = "warn"
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [] }
unnameable_types = "warn"
unreachable_pub = { level = "allow", priority = 1 }
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

as_underscore = "warn"
default_union_representation = "warn"
inline_asm_x86_att_syntax = "warn"
undocumented_unsafe_blocks = "allow"

cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
many_single_char_names = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
redundant_pub_crate = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
too_many_arguments = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
unreadable_literal = { level = "allow", priority = 1 }

[lints]
workspace = true
