[project]
name = "vapoursynth-cranexpr"
version = "0.2.0"
description = "VapourSynth expr plugin built on top of Cranelift."
readme = "README.md"
requires-python = ">=3.14.4"
license = "Apache-2.0"
license-files = ["LICENSE.md"]

dependencies = ["vapoursynth>=74"]

[dependency-groups]
dev = [
    "ruff==0.15.10",
]

[build-system]
requires = ["hatchling==1.29.0", "packaging==26.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins/cranexpr"]
artifacts = [
    "vapoursynth/plugins/cranexpr/*.dylib",
    "vapoursynth/plugins/cranexpr/*.so",
    "vapoursynth/plugins/cranexpr/*.dll",
    "vapoursynth/plugins/cranexpr/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "FA", "UP", "B", "SIM", "I", "RUF022"]
ignore = []

[tool.cibuildwheel]
skip = [
    "*-musllinux_*",  # musl targets do not support cdylib by design.
]

[tool.cibuildwheel.macos.environment]
# Rust's minimum macOS target is 10.12.
MACOSX_DEPLOYMENT_TARGET = "10.12"
