[project]
name = "vapoursynth-cranexpr"
version = "0.6.0"
description = "VapourSynth expr plugin built on top of Cranelift."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE.md"]

dependencies = ["vapoursynth>=75"]

[dependency-groups]
dev = [
    "ruff==0.15.12",
    "vapoursynth-akarin==1.4.1",
]

[build-system]
requires = ["hatchling==1.29.0", "packaging==26.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["vapoursynth/plugins/cranexpr"]
artifacts = [
    "vapoursynth/plugins/cranexpr/*.dylib",
    "vapoursynth/plugins/cranexpr/*.so",
    "vapoursynth/plugins/cranexpr/*.dll",
    "vapoursynth/plugins/cranexpr/manifest.vs",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "FA", "UP", "B", "SIM", "I", "RUF022"]
ignore = []

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = "cp312-*"     # Only need to target the minimum Python version.
skip = [
    "*-musllinux_*",  # musl targets do not support cdylib by design.
    "*-win32",        # Not supported by VapourSynth.
]

[tool.cibuildwheel.linux]
before-all = "curl -sSf https://sh.rustup.rs | sh -s -- -y"
environment = "PATH=$HOME/.cargo/bin:$PATH"

[tool.cibuildwheel.macos.environment]
# VapourSynth's minimum macOS target is 13.0.
MACOSX_DEPLOYMENT_TARGET = "13.0"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
before-all = "rustup target add x86_64-pc-windows-msvc"
