[package]
name = "cranexpr-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cranexpr"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.1", features = ["derive"] }

cranexpr-ast = { workspace = true }
cranexpr-codegen = { workspace = true }
cranexpr-parser = { workspace = true }
cranexpr-transforms = { workspace = true }

[lints]
workspace = true
