[package]
name = "cranexpr-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
miette = "=7.6.0"
nanoid = "=0.5.0"
thiserror = "=2.0.18"

cranelift = "=0.131.1"
cranelift-jit = "=0.131.1"
cranelift-module = "=0.131.1"
cranelift-native = "=0.131.1"

cranexpr-ast = { workspace = true }
cranexpr-parser = { workspace = true }

[dev-dependencies]
approx = "=0.5.1"
ndarray = "=0.17.2"
rstest = "=0.26.1"

[lints]
workspace = true
