[package]
name = "cranexpr-codegen"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
miette = "=7.6.0"
nanoid = "=0.5.0"
thiserror = "=2.0.19"

cranelift = "=0.133.1"
cranelift-jit = "=0.133.1"
cranelift-module = "=0.133.1"
cranelift-native = "=0.133.1"

cranexpr-ast = { workspace = true }
cranexpr-parser = { workspace = true }
cranexpr-transforms = { workspace = true }

[dev-dependencies]
aligned-vec = "=0.6.4"
approx = "=0.5.1"
ndarray = "=0.17.2"
rstest = "=0.26.1"

[lints]
workspace = true
