[package]
name = "cranexpr-parser"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
cranexpr-ast = { workspace = true }
cranexpr-lexer = { workspace = true }
thiserror = "=2.0.19"

[dev-dependencies]
insta = { version = "=1.48.0", features = ["yaml"] }
rstest = "=0.26.1"

[lints]
workspace = true
